fix review code